apresentacao-bigdatasys-net/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: apresentacao
  name: apresentacao
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apresentacao
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        io.kompose.service: apresentacao
    spec:
      containers:
        - name: apresentacao
          image: acrcuidarnew.azurecr.io/saude-publica-prd-web:2893
          command: ["/bin/bash", "-c"]
          args:
            - |
              mkdir -p app/tmp/pids
              mkdir -p app/tmp/sockets
              bundle exec puma -C config/puma/production.rb
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: azurefile
              mountPath: /mnt/compartilhado
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60      # Aguarda 5 minutos para dar tempo do app subir
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60      # Aguarda 5 minutos antes de considerar que o app deve estar respondendo
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 5
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 10
          resources:
            requests:
              cpu: "2000m"
              memory: "4Gi"
            limits:
              cpu: "3000m"
              memory: "5Gi"
      volumes:
        - name: azurefile
          persistentVolumeClaim:
            claimName: azurefile-pvc
      restartPolicy: Always
