apresentacao-bigdatasys-net/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apresentacao-service
spec:
  selector:
    io.kompose.service: apresentacao
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: ClusterIP
