apresentacao-bigdatasys-net/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apresentacao-ingress
  namespace: cuidar-apresentacao
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/load-balance: "least_conn"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apresentacao.bigdatasys.net
      secretName: apresentacao-tls
  rules:
    - host: apresentacao.bigdatasys.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: apresentacao-service
                port:
                  number: 80
